syntax = "proto3";

package svppl.v0;

service Task {
  rpc ScheduleTask (ScheduleTaskRequest) returns (ScheduleTaskReply) {}
}

message ScheduleTaskRequest {
  string queue_id = 1;
  int32 partition = 2;
  int64 scheduled_at = 3;
  int64 timeout_ms = 4;
}

message ScheduleTaskReply {
  bool success = 1;
  optional string task_id = 2;
}
